updated OpenApi YAML
